// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <PrincipalApp /> debe de mostrar el componente Correctamente  1`] = `
<Fragment>
  <h1>
     SearchGifs V2 
  </h1>
  <br />
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Pruebas en <PrincipalApp /> debe de mostrar una lista de categorías 1`] = `
<Fragment>
  <h1>
     SearchGifs V2 
  </h1>
  <br />
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Hunter x Hunter"
      key="Hunter x Hunter"
    />
    <GifGrid
      category="Dragon ball"
      key="Dragon ball"
    />
  </ol>
</Fragment>
`;
